added state transitions. application now working.
